--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_player.xml
@@ -27,7 +27,7 @@
             android:layout_height="@dimen/height_16"
             android:layout_alignEnd="@+id/youtube_layout"
             android:layout_alignStart="@+id/youtube_layout"
-            android:layout_below="@+id/youtube_layout"
+            android:layout_below="@id/youtube_layout"
             android:thumb="@drawable/radiothumb"
             android:layout_marginEnd="@dimen/margin_negative_18"
             android:layout_marginStart="@dimen/margin_negative_16"
@@ -63,7 +63,7 @@
             android:id="@+id/mute_button"
             android:layout_width="@dimen/width_40"
             android:layout_height="@dimen/height_40"
-            android:layout_below="@+id/play_button"
+            android:layout_below="@id/play_button"
             android:layout_toStartOf="@+id/center"
             android:button="@null"
             android:gravity="center"
@@ -75,7 +75,7 @@
             android:id="@+id/fullscreen_button"
             android:layout_width="@dimen/width_40"
             android:layout_height="@dimen/height_40"
-            android:layout_below="@+id/play_button"
+            android:layout_below="@id/play_button"
             android:layout_toEndOf="@+id/center"
             android:padding="@dimen/padding_10"
             android:src="@drawable/full_screen_icon" />
