--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -64,7 +64,7 @@
         android:id="@+id/sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:layout_marginStart="@dimen/margin_15"
         android:layout_toEndOf="@+id/profile_image"
         android:alpha="0.5"
@@ -75,7 +75,7 @@
         android:id="@+id/splitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:layout_toEndOf="@+id/sender"
         android:alpha="0.5"
         android:text="|"
@@ -87,7 +87,7 @@
         android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:layout_toEndOf="@+id/splitter"
         android:alpha="0.5"
         android:textColor="?chatDetailsColorRef"
