--- a/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
@@ -36,7 +36,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/your_profile_button"
+        android:layout_below="@id/your_profile_button"
         android:background="@android:color/black" />
 
     <!-- CONTENT CONTAINER -->
@@ -44,7 +44,7 @@
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/top_split_line"
+        android:layout_below="@id/top_split_line"
         android:background="?colorPrimarySemiLight"
         android:clickable="true">
 
@@ -160,7 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/contact_info_caption"
+                android:layout_below="@id/contact_info_caption"
                 android:textColor="@color/white" />
 
             <TextView
@@ -168,7 +168,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/contact_info_email"
+                android:layout_below="@id/contact_info_email"
                 android:textColor="@color/white" />
 
             <TextView
@@ -176,7 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/contact_info_phone"
+                android:layout_below="@id/contact_info_phone"
                 android:layout_marginTop="@dimen/margin_10"
                 android:text="@string/subscribed_since"
                 android:textColor="?colorAccent" />
@@ -186,7 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/contact_info_caption"
-                android:layout_below="@+id/member_since_caption"
+                android:layout_below="@id/member_since_caption"
                 android:textColor="@color/white" />
 
             <TextView
@@ -203,7 +203,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/location_caption"
-                android:layout_below="@+id/location_caption"
+                android:layout_below="@id/location_caption"
                 android:textColor="@color/white" />
 
             <TextView
@@ -211,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/member_since_caption"
-                android:layout_below="@+id/location_value"
+                android:layout_below="@id/location_value"
                 android:layout_toEndOf="@+id/text_center"
                 android:text="@string/follows_you"
                 android:textColor="?colorAccent" />
@@ -221,7 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/follows_you_caption"
-                android:layout_below="@+id/follows_you_caption"
+                android:layout_below="@id/follows_you_caption"
                 android:textColor="@color/white" />
 
         </RelativeLayout>
@@ -231,7 +231,7 @@
             android:id="@+id/left_horizontal_split_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_1"
-            android:layout_below="@+id/profile_container"
+            android:layout_below="@id/profile_container"
             android:layout_toStartOf="@+id/center_split_line"
             android:background="@android:color/black" />
 
@@ -240,7 +240,7 @@
             android:id="@+id/caps_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/left_horizontal_split_line"
+            android:layout_below="@id/left_horizontal_split_line"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
             android:layout_marginEnd="@dimen/margin_60"
@@ -338,7 +338,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_below="@+id/top_split_line"
+        android:layout_below="@id/top_split_line"
         android:layout_margin="@dimen/margin_30"
         android:layout_toEndOf="@+id/center_split" />
 
@@ -349,7 +349,7 @@
         android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
         android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="true"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:background="@drawable/popup_bottom_background"
         android:clickable="true">
 
@@ -423,7 +423,7 @@
         android:layout_width="@dimen/width_1"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_below="@+id/your_profile_button"
+        android:layout_below="@id/your_profile_button"
         android:layout_centerHorizontal="true"
         android:background="@android:color/black" />
 </RelativeLayout>
