--- a/SportsSideKick/app/src/main/res/layout/view_translation.xml
+++ b/SportsSideKick/app/src/main/res/layout/view_translation.xml
@@ -37,7 +37,7 @@
             android:id="@+id/translate"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/chat_button_size"
-            android:layout_below="@+id/language_picker"
+            android:layout_below="@id/language_picker"
             android:layout_gravity="center_horizontal"
             android:layout_marginEnd="@dimen/margin_10"
             android:background="@drawable/button_translate"
@@ -52,7 +52,7 @@
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/chat_button_size"
-            android:layout_below="@+id/language_picker"
+            android:layout_below="@id/language_picker"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_toEndOf="@+id/translate"
