--- a/SportsSideKick/app/src/main/res/layout-large/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/dialog_layout.xml
@@ -27,7 +27,7 @@
         android:id="@+id/dialog_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dialog_caption"
+        android:layout_below="@id/dialog_caption"
         android:layout_marginEnd="@dimen/margin_40"
         android:layout_marginStart="@dimen/margin_40"
         android:layout_marginTop="@dimen/margin_20"
@@ -41,7 +41,7 @@
         android:id="@+id/dialog_button_container"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/height_60"
-        android:layout_below="@+id/dialog_content"
+        android:layout_below="@id/dialog_content"
         android:layout_centerHorizontal="true">
 
         <ImageButton
