--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/chat_info_line_text"
-            android:layout_below="@+id/chat_heads_view"
+            android:layout_below="@id/chat_heads_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_20"
             android:paddingStart="@dimen/margin_60"
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/input_container"
-        android:layout_below="@+id/chat_info_line"
+        android:layout_below="@id/chat_info_line"
         android:layout_marginTop="@dimen/margin_negative_48">
 
         <android.support.v7.widget.RecyclerView
@@ -280,7 +280,7 @@
             android:layout_width="fill_parent"
             android:layout_height="200dp"
             android:layout_above="@+id/vide_download_image_button"
-            android:layout_below="@+id/video_close_image_button"
+            android:layout_below="@id/video_close_image_button"
             android:layout_centerInParent="true"
             android:background="@android:color/black">
 
@@ -307,7 +307,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/vide_download_image_button"
-            android:layout_below="@+id/video_close_image_button"
+            android:layout_below="@id/video_close_image_button"
             android:layout_centerInParent="true" />-->
 
         <ImageView
@@ -345,7 +345,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/download_image_button"
-            android:layout_below="@+id/close_image_button"
+            android:layout_below="@id/close_image_button"
             android:layout_centerInParent="true"
             android:background="@color/colorPrimarySemiDarkSemiTransparent"
             android:scaleType="fitCenter" />
