--- a/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
@@ -99,7 +99,7 @@
                 android:id="@+id/chat_name_label"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/create_chat_name_label_height"
-                android:layout_below="@+id/top_vertical_spliter"
+                android:layout_below="@id/top_vertical_spliter"
                 android:layout_toStartOf="@+id/top_vertical_spliter"
                 android:background="@color/colorPrimary"
                 android:foregroundGravity="right"
@@ -114,7 +114,7 @@
                 android:layout_width="@dimen/create_chat_name_label_height"
                 android:layout_height="@dimen/create_chat_name_label_height"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/top_vertical_spliter"
+                android:layout_below="@id/top_vertical_spliter"
                 android:background="?black_transparent_154"
                 android:scaleType="fitXY"
                 android:visibility="gone" />
@@ -133,7 +133,7 @@
                 android:id="@+id/chat_name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/create_chat_name_label_height"
-                android:layout_below="@+id/top_vertical_spliter"
+                android:layout_below="@id/top_vertical_spliter"
                 android:layout_toEndOf="@id/chat_image_view"
                 android:layout_toStartOf="@+id/chat_popup_image_button"
                 android:background="@color/colorPrimaryMediumDark"
@@ -151,7 +151,7 @@
                 android:layout_width="@dimen/create_chat_name_label_height"
                 android:layout_height="@dimen/create_chat_name_label_height"
                 android:layout_alignParentEnd="true"
-                android:layout_below="@+id/top_vertical_spliter"
+                android:layout_below="@id/top_vertical_spliter"
                 android:background="@color/colorPrimaryVeryLight"
                 android:clickable="true"
                 android:src="@drawable/chat_camera_button" />
@@ -162,7 +162,7 @@
             android:id="@+id/caption_label"
             android:layout_width="match_parent"
             android:layout_height="@dimen/create_chat_caption_label"
-            android:layout_below="@+id/chat_top_buttons_container"
+            android:layout_below="@id/chat_top_buttons_container"
             android:gravity="center"
             android:text="@string/add_friends_to_chat"
             android:textColor="?chatDescriptionTextColorRef" />
@@ -172,7 +172,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/caption_label">
+            android:layout_below="@id/caption_label">
 
             <View
                 android:id="@+id/chat_search_friends_container_mid_line"
@@ -271,7 +271,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/chat_search_friends_container"
+            android:layout_below="@id/chat_search_friends_container"
             android:clipToPadding="false"
             android:numColumns="auto_fit"
             android:layout_above="@+id/chat_friends_in_chat_container" />
