--- a/SportsSideKick/app/src/main/res/layout-large/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_edit_profile.xml
@@ -39,7 +39,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/edit_profile_top_container"
+        android:layout_below="@id/edit_profile_top_container"
         android:background="@android:color/black" />
 
 
@@ -69,7 +69,7 @@
                 android:id="@+id/profile_image"
                 android:layout_width="@dimen/width_80"
                 android:layout_height="@dimen/height_80"
-                android:layout_below="@+id/edit_photo_caption"
+                android:layout_below="@id/edit_photo_caption"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="@dimen/margin_8"
                 android:layout_marginEnd="@dimen/coin_lateral_margin"
@@ -80,7 +80,7 @@
                 android:id="@+id/camera_button"
                 android:layout_width="@dimen/standard_button_height"
                 android:layout_height="@dimen/standard_button_height"
-                android:layout_below="@+id/profile_image"
+                android:layout_below="@id/profile_image"
                 android:layout_toStartOf="@+id/center_of_profile_image"
                 android:background="@drawable/button_camera" />
 
@@ -94,7 +94,7 @@
                 android:id="@+id/picture_button"
                 android:layout_width="@dimen/standard_button_height"
                 android:layout_height="@dimen/standard_button_height"
-                android:layout_below="@+id/profile_image"
+                android:layout_below="@id/profile_image"
                 android:layout_toEndOf="@+id/center_of_profile_image"
                 android:background="@drawable/button_image" />
         </RelativeLayout>
@@ -119,7 +119,7 @@
             android:id="@+id/last_name_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/first_name_caption"
+            android:layout_below="@id/first_name_caption"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_20"
             android:layout_toStartOf="@+id/center"
@@ -130,7 +130,7 @@
             android:id="@+id/nickname_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/last_name_caption"
+            android:layout_below="@id/last_name_caption"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_20"
             android:layout_toStartOf="@+id/center"
@@ -141,7 +141,7 @@
             android:id="@+id/email_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nickname_caption"
+            android:layout_below="@id/nickname_caption"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_20"
             android:layout_toStartOf="@+id/center"
@@ -152,7 +152,7 @@
             android:id="@+id/telephone_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/email_caption"
+            android:layout_below="@id/email_caption"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_20"
             android:layout_toStartOf="@+id/center"
@@ -255,7 +255,7 @@
         android:id="@+id/bottom_buttons_container"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
-        android:layout_below="@+id/edit_profile_content_container"
+        android:layout_below="@id/edit_profile_content_container"
         android:background="@drawable/popup_bottom_background"
         android:clickable="true">
 
