--- a/SportsSideKick/app/src/main/res/layout-large/popup_language.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_language.xml
@@ -24,7 +24,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/caption"
+        android:layout_below="@id/caption"
         android:background="@android:color/black" />
 
     <android.support.v7.widget.RecyclerView
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_below="@+id/top_split_line">
+        android:layout_below="@id/top_split_line">
     </android.support.v7.widget.RecyclerView>
 
     <!-- BOTTOM BUTTONS CONTAINER -->
