--- a/SportsSideKick/app/src/main/res/layout-large/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_new_call.xml
@@ -116,7 +116,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:background="@drawable/popup_bottom_left_background"
-            android:layout_below="@+id/bottom_split_line">
+            android:layout_below="@id/bottom_split_line">
 
             <ImageView
                 android:id="@+id/search_icon"
@@ -152,7 +152,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@android:color/black" />
 
 </RelativeLayout>
