--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
@@ -124,7 +124,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:background="?attr/popupBottomLeftBackground"
-            android:layout_below="@+id/bottom_split_line">
+            android:layout_below="@id/bottom_split_line">
 
             <ImageView
                 android:id="@+id/search_icon"
@@ -214,7 +214,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@android:color/black" />
 
 </RelativeLayout>
