--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="?colorPrimarySemiLight">
 
         <ProgressBar
@@ -102,13 +102,13 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@android:color/black" />
 
     <TextView
         android:id="@+id/your_stash_caption"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/top_split_line"
+        android:layout_below="@id/top_split_line"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_20"
         android:layout_centerHorizontal="true"
@@ -125,7 +125,7 @@
         android:text="@string/rewards_received"
         android:textColor="?stashDescriptionColorRef"
         android:textSize="@dimen/font_size_12"
-        android:layout_below="@+id/your_stash_caption"
+        android:layout_below="@id/your_stash_caption"
         android:layout_centerHorizontal="true" />
 
 
@@ -135,7 +135,7 @@
         android:layout_width="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
         android:layout_height="match_parent"
-        android:layout_below="@+id/your_stash_description"
+        android:layout_below="@id/your_stash_description"
         android:layout_margin="@dimen/margin_20"
         android:numColumns="auto_fit"
         android:clipToPadding="false"/>
