--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_wallet.xml
@@ -18,7 +18,7 @@
         android:layout_above="@+id/bottom_buttons_container"
         android:layout_alignEnd="@+id/bundles_container"
         android:layout_alignStart="@+id/bundles_container"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="?colorPrimarySemiLight" />
 
     <!-- TOP BUTTONS CONTAINER -->
@@ -100,7 +100,7 @@
         android:id="@+id/coin_indicator_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/margin_15">
 
@@ -143,7 +143,7 @@
         android:id="@+id/bundles_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/coin_indicator_split_line"
+        android:layout_below="@id/coin_indicator_split_line"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/margin_10">
 
@@ -189,7 +189,7 @@
             android:layout_width="@dimen/popup_your_walet_bundle"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/ssk_bundles_caption"
+            android:layout_below="@id/ssk_bundles_caption"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_marginStart="@dimen/margin_20"
 
@@ -202,7 +202,7 @@
             android:id="@+id/bundle_2"
             android:layout_width="@dimen/popup_your_walet_bundle"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ssk_bundles_caption"
+            android:layout_below="@id/ssk_bundles_caption"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/bundle_1"
             android:adjustViewBounds="true"
@@ -213,7 +213,7 @@
             android:id="@+id/bundle_3"
             android:layout_width="@dimen/popup_your_walet_bundle"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ssk_bundles_caption"
+            android:layout_below="@id/ssk_bundles_caption"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/bundle_2"
             android:adjustViewBounds="true"
@@ -224,7 +224,7 @@
             android:id="@+id/bundle_4"
             android:layout_width="@dimen/popup_your_walet_bundle"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ssk_bundles_caption"
+            android:layout_below="@id/ssk_bundles_caption"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/bundle_3"
             android:adjustViewBounds="true"
@@ -235,7 +235,7 @@
             android:id="@+id/bundle_5"
             android:layout_width="@dimen/popup_your_walet_bundle"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ssk_bundles_caption"
+            android:layout_below="@id/ssk_bundles_caption"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/bundle_4"
             android:adjustViewBounds="true"
@@ -374,7 +374,7 @@
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/bundle_5"
             android:layout_alignStart="@+id/bundle_5"
-            android:layout_below="@+id/bundle_5"
+            android:layout_below="@id/bundle_5"
             android:layout_marginTop="@dimen/margin_5"
             android:gravity="center"
             android:text="\u2605 BEST VALUE \u2605"
@@ -389,7 +389,7 @@
         android:layout_above="@+id/bottom_buttons_container"
         android:layout_alignEnd="@+id/bundles_container"
         android:layout_alignStart="@+id/bundles_container"
-        android:layout_below="@+id/bundles_container"
+        android:layout_below="@id/bundles_container"
         android:layout_marginBottom="@dimen/margin_10"
         android:layout_marginEnd="@dimen/margin_10"
         android:layout_marginStart="@dimen/margin_10">
@@ -469,7 +469,7 @@
         android:layout_height="@dimen/height_1"
         android:layout_alignEnd="@+id/bundles_container"
         android:layout_alignStart="@+id/bundles_container"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@color/black" />
 
     <View
@@ -485,7 +485,7 @@
         android:layout_height="@dimen/height_1"
         android:layout_alignEnd="@+id/bundles_container"
         android:layout_alignStart="@+id/bundles_container"
-        android:layout_below="@+id/coin_indicator_container"
+        android:layout_below="@id/coin_indicator_container"
         android:background="@color/black" />
 
     <!-- BOTTOM BUTTONS CONTAINER -->
