--- a/SportsSideKick/app/src/main/res/layout-large/tv_category_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/tv_category_item.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?tvCategoryBackground"
-            android:layout_below="@+id/image"
+            android:layout_below="@id/image"
             android:bufferType="spannable"
             android:lines="3"
             android:padding="@dimen/padding_8"
