--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -102,7 +102,7 @@
                 android:layout_width="@dimen/top_bar_logo_tema_size"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_below="@+id/left_notification_container"
+                android:layout_below="@id/left_notification_container"
                 android:layout_marginTop="24dp"
                 android:padding="@dimen/half_margin"
                 android:scaleType="fitCenter"
@@ -203,7 +203,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
-            android:layout_below="@+id/left_top_bar_container"
+            android:layout_below="@id/left_top_bar_container"
             android:orientation="vertical"
             android:visibility="gone">
 
@@ -223,7 +223,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
-            android:layout_below="@+id/left_top_bar_container"
+            android:layout_below="@id/left_top_bar_container"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -335,7 +335,7 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@+id/holder_progress_bar"
+                            android:layout_below="@id/holder_progress_bar"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="@dimen/margin_negative_8">
 
@@ -420,7 +420,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/profile"
+                android:layout_below="@id/profile"
                 android:layout_gravity="start"
                 android:background="@color/colorGraySemiLight"
                 android:choiceMode="singleChoice"
