--- a/SportsSideKick/app/src/main/res/layout/add_chat_button.xml
+++ b/SportsSideKick/app/src/main/res/layout/add_chat_button.xml
@@ -19,7 +19,7 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
+        android:layout_below="@id/image"
         android:gravity="center"
         android:text="@string/chat_create"
         android:textColor="@color/white"
