--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -49,7 +49,7 @@
 
         <TextView
             android:id="@+id/chat_info_line_text"
-            android:layout_below="@+id/chat_heads_view"
+            android:layout_below="@id/chat_heads_view"
             tools:text="SCP: You and your friends"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_20"
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/input_container"
-        android:layout_below="@+id/chat_info_line"
+        android:layout_below="@id/chat_info_line"
         android:layout_marginTop="@dimen/margin_negative_48">
 
         <android.support.v7.widget.RecyclerView
@@ -312,7 +312,7 @@
             android:layout_width="fill_parent"
             android:layout_height="200dp"
             android:layout_above="@+id/vide_download_image_button"
-            android:layout_below="@+id/video_close_image_button"
+            android:layout_below="@id/video_close_image_button"
             android:layout_centerInParent="true"
             android:background="@android:color/black">
 
@@ -367,7 +367,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/download_image_button"
-            android:layout_below="@+id/close_image_button"
+            android:layout_below="@id/close_image_button"
             android:layout_centerInParent="true"
             android:background="@color/colorPrimarySemiDarkSemiTransparent"
             android:scaleType="fitCenter" />
@@ -471,7 +471,7 @@
                 android:id="@+id/center_below"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_below="@+id/center_parent" />
+                android:layout_below="@id/center_parent" />
 
             <!-- LOGIN CONTAINER -->
             <LinearLayout
