--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -306,7 +306,7 @@
                 android:id="@+id/center_below"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_below="@+id/center_parent" />
+                android:layout_below="@id/center_parent" />
 
             <Button
                 android:id="@+id/begin_your_call"
