--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -41,7 +41,7 @@
             android:id="@+id/date_prefix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
+            android:layout_below="@id/name"
             android:text="@string/requested_on"
             android:textColor="?friendItemTextColor" />
 
@@ -49,7 +49,7 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
+            android:layout_below="@id/name"
             android:layout_marginStart="@dimen/margin_5"
             android:layout_toEndOf="@+id/date_prefix"
             tools:text="Dec 1"
