--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -58,7 +58,7 @@
         android:id="@+id/sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:layout_toStartOf="@+id/splitter"
         android:alpha="0.5"
         android:text="@string/you"
@@ -69,7 +69,7 @@
         android:id="@+id/splitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:layout_toStartOf="@+id/timestamp"
         android:alpha="0.5"
         android:text="|"
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/content_container"
+        android:layout_below="@id/content_container"
         android:layout_marginEnd="@dimen/margin_15"
         android:alpha="0.5"
         android:textColor="?chatDetailsColorRef"
