--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/waiting_connection"
+        android:layout_below="@id/waiting_connection"
         android:background="@drawable/tiled_background_dense"/>
 
     <ImageView
@@ -27,7 +27,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/waiting_connection"
+        android:layout_below="@id/waiting_connection"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/margin_10"
         android:layout_marginStart="@dimen/margin_10">
@@ -51,7 +51,7 @@
             fontPath="fonts/TitilliumWeb-Regular.ttf"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:layout_below="@+id/club_logo"
+            android:layout_below="@id/club_logo"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginBottom="32dp"
@@ -71,7 +71,7 @@
             android:id="@+id/nextMatchContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/label"
+            android:layout_below="@id/label"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
@@ -97,7 +97,7 @@
                 android:id="@+id/teams_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/next_match_label"
+                android:layout_below="@id/next_match_label"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp">
 
@@ -174,7 +174,7 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/teams_info"
+                android:layout_below="@id/teams_info"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/margin_10"
                 tools:text="Sun 14 Dec"
@@ -188,7 +188,7 @@
                 android:layout_height="@dimen/height_60"
                 android:layout_alignEnd="@+id/teams_info"
                 android:layout_alignStart="@+id/teams_info"
-                android:layout_below="@+id/date"
+                android:layout_below="@id/date"
                 android:layout_marginBottom="@dimen/margin_20"
                 android:gravity="center"
                 android:maxLines="1"
@@ -205,7 +205,7 @@
             android:id="@+id/fc_logo"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_below="@+id/nextMatchContainer"
+            android:layout_below="@id/nextMatchContainer"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:src="@drawable/logo_fq"
