--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:layout_below="@+id/chat_headline_container"
+        android:layout_below="@id/chat_headline_container"
         android:layout_alignParentStart="true">
 
         <RelativeLayout
@@ -62,7 +62,7 @@
                 android:id="@+id/center_split"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_1"
-                android:layout_below="@+id/top_buttons_container"
+                android:layout_below="@id/top_buttons_container"
                 android:layout_centerHorizontal="true"
                 android:background="@color/colorPrimaryVeryLight">
 
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/center_split"
+                android:layout_below="@id/center_split"
                 android:background="@color/colorPrimaryDark"
                 android:orientation="horizontal">
 
@@ -124,7 +124,7 @@
             android:id="@+id/top_split_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_1"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:background="@color/colorPrimaryDark" />
         <View
             android:id="@+id/top_vertical_spliter_helper"
@@ -136,7 +136,7 @@
             android:id="@+id/chat_name_label"
             android:layout_width="match_parent"
             android:layout_height="@dimen/standard_button_height"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:layout_toStartOf="@+id/top_vertical_spliter_helper"
             android:background="@color/colorPrimary"
             android:foregroundGravity="right"
@@ -151,7 +151,7 @@
             android:layout_width="@dimen/height_55"
             android:layout_height="@dimen/height_55"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:background="?black_transparent_154"
             android:scaleType="fitXY"
             android:visibility="gone" />
@@ -171,7 +171,7 @@
             android:id="@+id/chat_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_55"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:layout_toEndOf="@id/chat_image_view"
             android:layout_toStartOf="@+id/chat_popup_image_button"
             android:background="@color/colorPrimaryMediumDark"
@@ -189,7 +189,7 @@
             android:layout_width="@dimen/height_55"
             android:layout_height="@dimen/height_55"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:background="@color/colorPrimaryVeryLight"
             android:clickable="true"
             android:src="@drawable/chat_camera_button" />
@@ -200,7 +200,7 @@
         android:id="@+id/caption_label"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_35"
-        android:layout_below="@+id/chat_top_buttons_container"
+        android:layout_below="@id/chat_top_buttons_container"
         android:gravity="center"
         android:text="@string/chat_friends_add"
         android:textColor="?chatDescriptionTextPhoneColorRef" />
@@ -210,7 +210,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/caption_label">
+        android:layout_below="@id/caption_label">
 
         <View
             android:id="@+id/chat_search_friends_container_mid_line"
@@ -312,7 +312,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/chat_friends_in_chat_container"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/chat_search_friends_container"
+        android:layout_below="@id/chat_search_friends_container"
         android:layout_marginEnd="@dimen/margin_16"
         android:layout_marginStart="@dimen/margin_16"
         android:clipToPadding="false"
