--- a/SportsSideKick/app/src/main/res/layout/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_chat.xml
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:layout_below="@+id/headline_container"
+        android:layout_below="@id/headline_container"
         android:layout_alignParentStart="true">
 
     <View
@@ -100,7 +100,7 @@
         android:id="@+id/name_label"
         android:layout_width="match_parent"
         android:layout_height="@dimen/create_chat_name_label_height"
-        android:layout_below="@+id/edit_top_vertical_spliter"
+        android:layout_below="@id/edit_top_vertical_spliter"
         android:layout_toStartOf="@+id/edit_top_vertical_spliter"
         android:background="@color/colorPrimary"
         android:foregroundGravity="right"
@@ -116,7 +116,7 @@
             android:layout_width="@dimen/create_chat_name_label_height"
             android:layout_height="@dimen/create_chat_name_label_height"
             android:padding="8dp"
-            android:layout_below="@+id/edit_top_vertical_spliter"
+            android:layout_below="@id/edit_top_vertical_spliter"
             android:layout_alignParentStart="true"
             android:background="?black_transparent_154"
             android:visibility="gone"
@@ -128,7 +128,7 @@
         android:id="@+id/chat_name_edit_text"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_60"
-        android:layout_below="@+id/edit_top_vertical_spliter"
+        android:layout_below="@id/edit_top_vertical_spliter"
         android:background="@color/colorPrimaryMediumDark"
         android:gravity="start|center_vertical"
         android:hint="@string/chat_give_name"
@@ -147,7 +147,7 @@
             android:layout_alignParentEnd="true"
             android:src="@drawable/chat_camera_button"
             android:background="@color/colorPrimaryVeryLight"
-            android:layout_below="@+id/edit_top_vertical_spliter"
+            android:layout_below="@id/edit_top_vertical_spliter"
             android:clickable="true"/>
 
     </RelativeLayout>
@@ -156,7 +156,7 @@
         android:id="@+id/edit_caption_label"
         android:layout_width="match_parent"
         android:layout_height="@dimen/create_chat_caption_label"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:gravity="center"
         android:textColor="@color/white" />
 
@@ -256,7 +256,7 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/search_friends_container"
+        android:layout_below="@id/search_friends_container"
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_above="@+id/friends_in_chat_container">
@@ -284,5 +284,5 @@
         android:numColumns="auto_fit"
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/friends_in_chat_container"
-        android:layout_below="@+id/search_friends_container" />
+        android:layout_below="@id/search_friends_container" />
 </RelativeLayout>
