--- a/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
@@ -57,7 +57,7 @@
         android:layout_height="@dimen/standard_button_height"
         android:visibility="gone"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/top_toolbar"
+        android:layout_below="@id/top_toolbar"
         android:background="@color/colorPrimaryAbsoluteDark"
         android:orientation="horizontal">
 
@@ -98,7 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
         android:visibility="gone"
-        android:layout_below="@+id/top_toolbar"
+        android:layout_below="@id/top_toolbar"
         android:orientation="horizontal">
 
         <View
@@ -125,7 +125,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/top_buttons_container">
+        android:layout_below="@id/top_buttons_container">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -157,7 +157,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/edit_your_profile"
+                    android:layout_below="@id/edit_your_profile"
                     android:layout_marginBottom="@dimen/margin_25">
 
                     <TextView
@@ -214,7 +214,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_images_container"
+                android:layout_below="@id/profile_images_container"
                 android:orientation="vertical">
 
                 <View
