--- a/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
@@ -52,7 +52,7 @@
         android:id="@+id/center_split"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:layout_centerHorizontal="true"
         android:background="@color/colorPrimaryVeryLight">
 
@@ -82,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/center_split"
+        android:layout_below="@id/center_split"
         android:background="@color/colorPrimaryDark"
         android:orientation="horizontal">
 
@@ -123,13 +123,13 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_container"
+        android:layout_below="@id/top_container"
         android:background="@color/colorPrimaryDark" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/top_split_line">
+        android:layout_below="@id/top_split_line">
 
 
         <android.support.v7.widget.RecyclerView
