--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
 
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/chat_headline_container"
+        android:layout_below="@id/chat_headline_container"
         android:clickable="true">
 
         <View
@@ -60,7 +60,7 @@
                 android:id="@+id/center_split"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_1"
-                android:layout_below="@+id/top_buttons_container"
+                android:layout_below="@id/top_buttons_container"
                 android:layout_centerHorizontal="true"
                 android:background="@color/colorPrimaryVeryLight">
 
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/center_split"
+                android:layout_below="@id/center_split"
                 android:background="@color/colorPrimaryDark"
                 android:orientation="horizontal">
 
@@ -119,7 +119,7 @@
             android:id="@+id/top_split_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_1"
-            android:layout_below="@+id/top_vertical_spliter"
+            android:layout_below="@id/top_vertical_spliter"
             android:background="@android:color/black" />
 
         <TextView
@@ -127,7 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/popup_join_chat_caption_label_height"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/top_vertical_spliter"
+            android:layout_below="@id/top_vertical_spliter"
             android:gravity="center"
             android:text="@string/chats_public"
             android:textColor="@color/white" />
@@ -136,7 +136,7 @@
             android:id="@+id/chat_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50"
-            android:layout_below="@+id/top_vertical_spliter"
+            android:layout_below="@id/top_vertical_spliter"
             android:layout_toStartOf="@+id/chat_join_search_button"
             android:background="@color/colorPrimaryMediumDark"
             android:gravity="start|center_vertical"
@@ -153,7 +153,7 @@
             android:layout_width="@dimen/height_50"
             android:layout_height="@dimen/height_50"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/top_vertical_spliter"
+            android:layout_below="@id/top_vertical_spliter"
             android:background="@color/colorPrimaryVeryLight"
             android:src="@drawable/ic_search" />
 
@@ -162,7 +162,7 @@
             android:id="@+id/join_chat_search_result_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/chat_name_edit_text"
+            android:layout_below="@id/chat_name_edit_text"
             android:childDivider="@android:color/transparent"
             android:childIndicator="@android:color/transparent"
             android:divider="@android:color/transparent"
@@ -178,7 +178,7 @@
         android:id="@+id/friends_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/chat_top_container"
+        android:layout_below="@id/chat_top_container"
         android:layout_above="@+id/bottom_public_chats_container"/>
     <RelativeLayout
         android:id="@+id/bottom_public_chats_container"
@@ -202,7 +202,7 @@
             android:id="@+id/bottom_public_chats_recycler_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/bottom_public_chats_headline">
+            android:layout_below="@id/bottom_public_chats_headline">
 
             <ImageView
                 android:id="@+id/bottom_public_chats_arrow"
