--- a/SportsSideKick/app/src/main/res/layout/popup_language.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_language.xml
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/top_toolbar"
+        android:layout_below="@id/top_toolbar"
         android:background="@color/colorPrimaryAbsoluteDark"
         android:orientation="horizontal">
 
@@ -87,7 +87,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
-        android:layout_below="@+id/top_toolbar"
+        android:layout_below="@id/top_toolbar"
         android:orientation="horizontal">
 
         <View
@@ -114,7 +114,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@android:color/black" />
     <TextView
         android:id="@+id/chosen_language_text"
@@ -124,7 +124,7 @@
         android:textColor="?editLanguageTextColorRef"
         android:textSize="@dimen/font_size_12"
         android:padding="@dimen/padding_8"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:layout_centerHorizontal="true" />
 
     <android.support.v7.widget.RecyclerView
@@ -133,7 +133,7 @@
         android:layout_marginEnd="@dimen/margin_15"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/chosen_language_text">
+        android:layout_below="@id/chosen_language_text">
 
 
     </android.support.v7.widget.RecyclerView>
