--- a/SportsSideKick/app/src/main/res/layout/popup_modal.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_modal.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_marginStart="@dimen/margin_40"
         android:layout_marginTop="@dimen/margin_20"
-        android:layout_below="@+id/caption"
+        android:layout_below="@id/caption"
         android:layout_marginEnd="@dimen/margin_40"
         android:textColor="?alertDialogTextColor"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
     <!-- BOTTOM BUTTONS CONTAINER -->
     <RelativeLayout
         android:id="@+id/bottom_buttons_container"
-        android:layout_below="@+id/text"
+        android:layout_below="@id/text"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_height="@dimen/popup_language_bottom_buttons_container_height">
