--- a/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/chat_headline_container"
+        android:layout_below="@id/chat_headline_container"
         android:clickable="true">
 
         <RelativeLayout
@@ -57,7 +57,7 @@
                 android:id="@+id/center_split"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_1"
-                android:layout_below="@+id/top_buttons_container"
+                android:layout_below="@id/top_buttons_container"
                 android:layout_centerHorizontal="true"
                 android:background="@color/colorPrimaryVeryLight">
 
@@ -88,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/center_split"
+                android:layout_below="@id/center_split"
                 android:background="@color/colorPrimaryDark"
                 android:orientation="horizontal">
 
@@ -111,7 +111,7 @@
             android:id="@+id/top_split_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_1"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:background="@color/colorPrimaryDark" />
 
         <View
@@ -125,7 +125,7 @@
             android:id="@+id/chat_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_55"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:layout_toEndOf="@id/chat_image_view"
             android:layout_toStartOf="@+id/chat_popup_image_button"
             android:background="@color/colorPrimaryMediumDark"
@@ -143,7 +143,7 @@
             android:layout_width="@dimen/height_55"
             android:layout_height="@dimen/height_55"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/top_container"
+            android:layout_below="@id/top_container"
             android:background="@color/colorPrimaryVeryLight"
             android:clickable="true"
             android:src="@drawable/icon_search" />
@@ -199,7 +199,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/chat_friends_in_chat_container"
-        android:layout_below="@+id/chat_top_buttons_container">
+        android:layout_below="@id/chat_top_buttons_container">
 
         <base.app.util.ui.AutofitRecyclerView
             android:id="@+id/friends_recycler_view"
