--- a/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
@@ -64,7 +64,7 @@
         android:id="@+id/caption_label"
         android:layout_width="match_parent"
         android:layout_height="@dimen/create_chat_caption_label"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:gravity="center"
         android:background="?colorPrimarySemiLight"
         android:text="@string/following"
@@ -143,7 +143,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:background="?attr/popupBottomLeftBackground"
-            android:layout_below="@+id/bottom_split_line">
+            android:layout_below="@id/bottom_split_line">
 
             <ImageView
                 android:id="@+id/search_icon"
@@ -199,7 +199,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@android:color/black" />
 
 </RelativeLayout>
