--- a/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
@@ -56,7 +56,7 @@
         android:id="@+id/center_split"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:layout_centerHorizontal="true"
         android:background="@color/colorPrimaryVeryLight">
 
@@ -86,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/center_split"
+        android:layout_below="@id/center_split"
         android:background="@color/colorPrimaryDark"
         android:orientation="horizontal">
 
@@ -127,7 +127,7 @@
         android:id="@+id/spliter_profile"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
-        android:layout_below="@+id/top_container"
+        android:layout_below="@id/top_container"
         android:background="@color/colorPrimaryVeryDark" />
 
     <RelativeLayout
@@ -135,7 +135,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_48"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/spliter_profile"
+        android:layout_below="@id/spliter_profile"
         android:background="@color/colorPrimaryMediumDark">
 
 
@@ -219,7 +219,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/official_account">
+            android:layout_below="@id/official_account">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/official_account_list"
