--- a/SportsSideKick/app/src/main/res/layout/popup_your_statement.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_statement.xml
@@ -21,14 +21,14 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/caption"
+        android:layout_below="@id/caption"
         android:background="@android:color/black" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/stats_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/caption"
+        android:layout_below="@id/caption"
         android:layout_margin="@dimen/margin_20" />
 
     <ImageView
