--- a/SportsSideKick/app/src/main/res/layout/selectable_friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/selectable_friend_item.xml
@@ -46,7 +46,7 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
+        android:layout_below="@id/image"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginTop="@dimen/margin_5"
