--- a/SportsSideKick/app/src/main/res/layout/stash_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/stash_item.xml
@@ -21,7 +21,7 @@
         android:textSize="@dimen/font_size_12"
         android:gravity="center_horizontal"
         android:lines="1"
-        android:layout_below="@+id/background"
+        android:layout_below="@id/background"
         android:layout_height="wrap_content"
         android:text="SOCCER BOOT"
         android:textColor="?colorAccent"/>
@@ -29,7 +29,7 @@
         android:id="@+id/profile_frame"
         android:layout_width="match_parent"
         android:gravity="center_horizontal"
-        android:layout_below="@+id/award_name"
+        android:layout_below="@id/award_name"
         android:textSize="@dimen/font_size_11"
         android:textStyle="italic"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
         android:id="@+id/received_from"
         android:layout_width="match_parent"
         android:gravity="center_horizontal"
-        android:layout_below="@+id/profile_frame"
+        android:layout_below="@id/profile_frame"
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_size_10"
         android:lines="2"
