--- a/SportsSideKick/app/src/main/res/layout/tv_category_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/tv_category_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_height="wrap_content"
-            android:layout_below="@+id/image"
+            android:layout_below="@id/image"
             android:background="?tvCategoryBackground"
             android:bufferType="spannable"
             android:maxLines="3"
