--- a/SportsSideKick/app/src/main/res/layout/tv_channel_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/tv_channel_item.xml
@@ -24,7 +24,7 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
+        android:layout_below="@id/image"
         android:background="?channelItemBackground"
         android:bufferType="spannable"
         android:lines="2"
@@ -36,7 +36,7 @@
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/caption"
+        android:layout_below="@id/caption"
         android:background="?channelItemBackground"
         android:bufferType="spannable"
         android:lines="1"
