--- a/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
@@ -57,7 +57,7 @@
         android:id="@+id/text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/authorImage"
+        android:layout_below="@id/authorImage"
         android:layout_toEndOf="@+id/strip"
         android:layout_toStartOf="@+id/image"
         android:background="?white"
@@ -77,7 +77,7 @@
         android:layout_height="@dimen/height_25"
         android:layout_alignBottom="@+id/image"
         android:layout_alignWithParentIfMissing="true"
-        android:layout_below="@+id/text_content"
+        android:layout_below="@id/text_content"
         android:layout_toEndOf="@+id/strip"
         android:layout_toStartOf="@+id/image"
         android:background="@color/white"
